--- a/TagV3.0_U575VGT/TagV3.0_U575VGT.ioc
+++ b/TagV3.0_U575VGT/TagV3.0_U575VGT.ioc
@@ -445,8 +445,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=TagV3.0_U5_VGT.ioc
-ProjectManager.ProjectName=TagV3.0_U5_VGT
+ProjectManager.ProjectFileName=TagV3.0_U575VGT.ioc
+ProjectManager.ProjectName=TagV3.0_U575VGT
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=SAI
 ProjectManager.StackSize=0x400
