--- a/TagV3.0_U575VGT/TagV3.0_U575VGT.ioc
+++ b/TagV3.0_U575VGT/TagV3.0_U575VGT.ioc
@@ -1,4 +1,20 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC1.CommonPathInternal=null|null|null|null
+ADC1.EnableRegularConversion=ENABLE
+ADC1.IPParameters=NbrOfConversion,master,EnableRegularConversion,Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,MonitoredBy-1\#ChannelRegularConversion,CommonPathInternal
+ADC1.MonitoredBy-0\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-1\#ChannelRegularConversion=__NULL
+ADC1.NbrOfConversion=2
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Rank-1\#ChannelRegularConversion=2
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_5CYCLE
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_5CYCLE
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -10,8 +26,6 @@ DAC1.DAC_SignedFormat-DAC_OUT1=DISABLE
 DAC1.DAC_Trigger-DAC_OUT1=DAC_TRIGGER_T2_TRGO
 DAC1.DAC_UserTrimming-DAC_OUT1=DAC_TRIMMING_FACTORY
 DAC1.IPParameters=DAC_Channel-DAC_OUT1,DAC_Trigger-DAC_OUT1,DAC_SignedFormat-DAC_OUT1,DAC_OutputBuffer_OUT1-DAC_OUT1,DAC_UserTrimming-DAC_OUT1,DAC_SampleAndHold-DAC_OUT1
-DCMI.IPParameters=JPEGMode
-DCMI.JPEGMode=DCMI_JPEG_DISABLE
 FILEX.FILEX_APPLICATION_THREAD_PRIORITY=1
 FILEX.FILEX_APPLICATION_THREAD_STACK_SIZE=2048
 FILEX.FORMAT_SD_MEDIA=0
@@ -58,8 +72,8 @@ KeepUserPlacement=false
 Mcu.CPN=STM32U575VGT6
 Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32U5
-Mcu.IP0=CORTEX_M33_NS
-Mcu.IP1=DAC1
+Mcu.IP0=ADC1
+Mcu.IP1=CORTEX_M33_NS
 Mcu.IP10=LPBAMQUEUE
 Mcu.IP11=NVIC
 Mcu.IP12=PWR
@@ -70,7 +84,7 @@ Mcu.IP16=SDMMC1
 Mcu.IP17=SPI1
 Mcu.IP18=SPI2
 Mcu.IP19=SYS
-Mcu.IP2=DCMI
+Mcu.IP2=DAC1
 Mcu.IP20=THREADX
 Mcu.IP21=TIM2
 Mcu.IP22=UART4
@@ -88,8 +102,8 @@ Mcu.IP9=LPBAM
 Mcu.IPNb=27
 Mcu.Name=STM32U575VGTx
 Mcu.Package=LQFP100
-Mcu.Pin0=PE4
-Mcu.Pin1=PE6
+Mcu.Pin0=PE6
+Mcu.Pin1=PC14-OSC32_IN (PC14)
 Mcu.Pin10=PA0
 Mcu.Pin11=PA1
 Mcu.Pin12=PA2
@@ -99,81 +113,79 @@ Mcu.Pin15=PA6
 Mcu.Pin16=PC4
 Mcu.Pin17=PC5
 Mcu.Pin18=PB0
-Mcu.Pin19=PB2
-Mcu.Pin2=PC14-OSC32_IN (PC14)
-Mcu.Pin20=PE7
-Mcu.Pin21=PE8
-Mcu.Pin22=PE9
-Mcu.Pin23=PE11
-Mcu.Pin24=PE12
-Mcu.Pin25=PE13
-Mcu.Pin26=PE14
-Mcu.Pin27=PE15
-Mcu.Pin28=PB10
-Mcu.Pin29=PB12
-Mcu.Pin3=PC15-OSC32_OUT (PC15)
-Mcu.Pin30=PB13
-Mcu.Pin31=PB14
-Mcu.Pin32=PB15
-Mcu.Pin33=PD8
-Mcu.Pin34=PD9
-Mcu.Pin35=PD10
-Mcu.Pin36=PD11
-Mcu.Pin37=PD12
-Mcu.Pin38=PD13
-Mcu.Pin39=PD14
-Mcu.Pin4=PH0-OSC_IN (PH0)
-Mcu.Pin40=PD15
-Mcu.Pin41=PC6
-Mcu.Pin42=PC7
-Mcu.Pin43=PC8
-Mcu.Pin44=PC9
-Mcu.Pin45=PA9
-Mcu.Pin46=PA11
-Mcu.Pin47=PA12
-Mcu.Pin48=PA13 (JTMS/SWDIO)
-Mcu.Pin49=PA14 (JTCK/SWCLK)
-Mcu.Pin5=PH1-OSC_OUT (PH1)
-Mcu.Pin50=PC10
-Mcu.Pin51=PC11
-Mcu.Pin52=PC12
-Mcu.Pin53=PD1
-Mcu.Pin54=PD2
-Mcu.Pin55=PD3
-Mcu.Pin56=PD4
-Mcu.Pin57=PB3 (JTDO/TRACESWO)
-Mcu.Pin58=PB6
-Mcu.Pin59=PB7
-Mcu.Pin6=PC0
-Mcu.Pin60=PB8
-Mcu.Pin61=PB9
-Mcu.Pin62=PE0
-Mcu.Pin63=PE1
-Mcu.Pin64=VP_FILEX_VS_FileOoSystemJjFileXJjCore
-Mcu.Pin65=VP_FILEX_VS_SDOointerface
-Mcu.Pin66=VP_GPDMA1_VS_GPDMACH0
-Mcu.Pin67=VP_GPDMA1_VS_GPDMACH1
-Mcu.Pin68=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin69=VP_PWR_VS_SECSignals
-Mcu.Pin7=PC1
-Mcu.Pin70=VP_PWR_VS_LPOM
-Mcu.Pin71=VP_RTC_VS_RTC_Activate
-Mcu.Pin72=VP_SYS_VS_tim6
-Mcu.Pin73=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin74=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin75=VP_USBX_Core_System
-Mcu.Pin76=VP_USBX_UX Device CoreStack_FS
-Mcu.Pin77=VP_USBX_UX Device MSC_FS
-Mcu.Pin78=VP_LPBAM_VS_SIG1
-Mcu.Pin79=VP_LPBAM_VS_SIG4
-Mcu.Pin8=PC2
+Mcu.Pin19=PB1
+Mcu.Pin2=PC15-OSC32_OUT (PC15)
+Mcu.Pin20=PB2
+Mcu.Pin21=PE7
+Mcu.Pin22=PE8
+Mcu.Pin23=PE9
+Mcu.Pin24=PE11
+Mcu.Pin25=PE12
+Mcu.Pin26=PE13
+Mcu.Pin27=PE14
+Mcu.Pin28=PE15
+Mcu.Pin29=PB10
+Mcu.Pin3=PH0-OSC_IN (PH0)
+Mcu.Pin30=PB12
+Mcu.Pin31=PB13
+Mcu.Pin32=PB14
+Mcu.Pin33=PB15
+Mcu.Pin34=PD10
+Mcu.Pin35=PD11
+Mcu.Pin36=PD12
+Mcu.Pin37=PD13
+Mcu.Pin38=PD14
+Mcu.Pin39=PD15
+Mcu.Pin4=PH1-OSC_OUT (PH1)
+Mcu.Pin40=PC8
+Mcu.Pin41=PC9
+Mcu.Pin42=PA9
+Mcu.Pin43=PA11
+Mcu.Pin44=PA12
+Mcu.Pin45=PA13 (JTMS/SWDIO)
+Mcu.Pin46=PA14 (JTCK/SWCLK)
+Mcu.Pin47=PC10
+Mcu.Pin48=PC11
+Mcu.Pin49=PC12
+Mcu.Pin5=PC0
+Mcu.Pin50=PD1
+Mcu.Pin51=PD2
+Mcu.Pin52=PD3
+Mcu.Pin53=PD4
+Mcu.Pin54=PD6
+Mcu.Pin55=PD7
+Mcu.Pin56=PB3 (JTDO/TRACESWO)
+Mcu.Pin57=PB4 (NJTRST)
+Mcu.Pin58=PB5
+Mcu.Pin59=PB6
+Mcu.Pin6=PC1
+Mcu.Pin60=PB7
+Mcu.Pin61=VP_FILEX_VS_FileOoSystemJjFileXJjCore
+Mcu.Pin62=VP_FILEX_VS_SDOointerface
+Mcu.Pin63=VP_GPDMA1_VS_GPDMACH0
+Mcu.Pin64=VP_GPDMA1_VS_GPDMACH1
+Mcu.Pin65=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin66=VP_PWR_VS_SECSignals
+Mcu.Pin67=VP_PWR_VS_LPOM
+Mcu.Pin68=VP_PWR_Vdda
+Mcu.Pin69=VP_RTC_VS_RTC_Activate
+Mcu.Pin7=PC2
+Mcu.Pin70=VP_SYS_VS_tim6
+Mcu.Pin71=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin72=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin73=VP_USBX_Core_System
+Mcu.Pin74=VP_USBX_UX Device CoreStack_FS
+Mcu.Pin75=VP_USBX_UX Device MSC_FS
+Mcu.Pin76=VP_LPBAM_VS_SIG1
+Mcu.Pin77=VP_LPBAM_VS_SIG4
+Mcu.Pin8=PC3
 Mcu.Pin9=VREF+
-Mcu.PinsNb=80
+Mcu.PinsNb=78
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U575VGTx
-MxCube.Version=6.8.0
-MxDb.Version=DB.6.0.80
+MxCube.Version=6.9.1
+MxDb.Version=DB.6.0.91
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI12_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true\:true
@@ -234,6 +246,10 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=GPS_EXTINT
 PB0.Locked=true
 PB0.Signal=GPXTI0
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=RF_3V3_EN
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB10.GPIOParameters=PinAttribute
 PB10.Mode=I2C
 PB10.PinAttribute=Free
@@ -264,19 +280,26 @@ PB2.PinState=GPIO_PIN_SET
 PB2.Signal=GPIO_Output
 PB3\ (JTDO/TRACESWO).Mode=Trace_Asynchronous_SW
 PB3\ (JTDO/TRACESWO).Signal=DEBUG_JTDO-SWO
+PB4\ (NJTRST).GPIOParameters=PinState,GPIO_Label
+PB4\ (NJTRST).GPIO_Label=DIAG_LED2
+PB4\ (NJTRST).Locked=true
+PB4\ (NJTRST).PinState=GPIO_PIN_SET
+PB4\ (NJTRST).Signal=GPIO_Output
+PB5.GPIOParameters=PinState,GPIO_Label
+PB5.GPIO_Label=DIAG_LED1
+PB5.Locked=true
+PB5.PinState=GPIO_PIN_SET
+PB5.Signal=GPIO_Output
+PB6.GPIOParameters=PinState,GPIO_Label
+PB6.GPIO_Label=DIAG_LED4
 PB6.Locked=true
-PB6.Mode=Slave_8_bits_External_Synchro
-PB6.Signal=DCMI_D5
-PB7.GPIOParameters=PinAttribute
-PB7.Mode=Slave_8_bits_External_Synchro
-PB7.PinAttribute=Free
-PB7.Signal=DCMI_VSYNC
-PB8.Locked=true
-PB8.Mode=Slave_8_bits_External_Synchro
-PB8.Signal=DCMI_D6
-PB9.Locked=true
-PB9.Mode=Slave_8_bits_External_Synchro
-PB9.Signal=DCMI_D7
+PB6.PinState=GPIO_PIN_SET
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=PinState,GPIO_Label
+PB7.GPIO_Label=DIAG_LED3
+PB7.Locked=true
+PB7.PinState=GPIO_PIN_SET
+PB7.Signal=GPIO_Output
 PC0.Mode=I2C
 PC0.Signal=I2C3_SCL
 PC1.GPIOParameters=PinAttribute
@@ -299,22 +322,19 @@ PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Label,PinAttribute
-PC2.GPIO_Label=BMS_ALRT
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=POS_5_MON
 PC2.Locked=true
-PC2.PinAttribute=Free
-PC2.Signal=GPXTI2
+PC2.Signal=SharedAnalog_PC2
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=NEG_5_MON
+PC3.Locked=true
+PC3.Signal=SharedAnalog_PC3
 PC4.Locked=true
 PC4.Mode=Asynchronous
 PC4.Signal=USART3_TX
 PC5.Mode=Asynchronous
 PC5.Signal=USART3_RX
-PC6.Mode=Slave_8_bits_External_Synchro
-PC6.Signal=DCMI_D0
-PC7.GPIOParameters=PinAttribute
-PC7.Mode=Slave_8_bits_External_Synchro
-PC7.PinAttribute=Free
-PC7.Signal=DCMI_D1
 PC8.GPIOParameters=PinAttribute
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.PinAttribute=Free
@@ -369,24 +389,14 @@ PD4.Locked=true
 PD4.Mode=Full_Duplex_Master
 PD4.PinAttribute=Free
 PD4.Signal=SPI2_MOSI
-PD8.GPIOParameters=PinAttribute
-PD8.Locked=true
-PD8.Mode=Slave_8_bits_External_Synchro
-PD8.PinAttribute=Free
-PD8.Signal=DCMI_HSYNC
-PD9.GPIOParameters=PinAttribute
-PD9.Locked=true
-PD9.Mode=Slave_8_bits_External_Synchro
-PD9.PinAttribute=Free
-PD9.Signal=DCMI_PIXCLK
-PE0.GPIOParameters=PinAttribute
-PE0.Mode=Slave_8_bits_External_Synchro
-PE0.PinAttribute=Free
-PE0.Signal=DCMI_D2
-PE1.GPIOParameters=PinAttribute
-PE1.Mode=Slave_8_bits_External_Synchro
-PE1.PinAttribute=Free
-PE1.Signal=DCMI_D3
+PD6.GPIOParameters=GPIO_Label
+PD6.GPIO_Label=NEG_5V_EN
+PD6.Locked=true
+PD6.Signal=GPIO_Output
+PD7.GPIOParameters=GPIO_Label
+PD7.GPIO_Label=POS_5V_EN
+PD7.Locked=true
+PD7.Signal=GPIO_Output
 PE11.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PE11.GPIO_Label=IMU_WAKE
 PE11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
@@ -406,8 +416,6 @@ PE14.Signal=SPI1_MISO
 PE15.Locked=true
 PE15.Mode=Full_Duplex_Master
 PE15.Signal=SPI1_MOSI
-PE4.Mode=Slave_8_bits_External_Synchro
-PE4.Signal=DCMI_D4
 PE6.GPIOParameters=GPIO_Label
 PE6.GPIO_Label=BURNWIRE_ON
 PE6.Locked=true
@@ -433,7 +441,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32U575VGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_U5 V1.2.0
+ProjectManager.FirmwarePackage=STM32Cube FW_U5 V1.3.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -452,8 +460,10 @@ ProjectManager.RegisterCallBack=SAI
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_I2C4_Init-I2C4-false-HAL-true,5-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,9-MX_RTC_Init-RTC-false-HAL-true,10-MX_DCMI_Init-DCMI-false-HAL-true,11-MX_I2C2_Init-I2C2-false-HAL-true,12-MX_SAI1_Init-SAI1-false-HAL-true,13-MX_I2C3_Init-I2C3-false-HAL-true,14-MX_SPI2_Init-SPI2-false-HAL-true,15-MX_USART3_UART_Init-USART3-false-HAL-true,16-MX_FileX_Init-FILEX-false-HAL-false,17-MX_DAC1_Init-DAC1-false-HAL-true,18-MX_TIM2_Init-TIM2-false-HAL-true,19-MX_USBX_Init-USBX-false-HAL-false,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true,0-MX_VREFBUF_Init-VREFBUF-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_I2C4_Init-I2C4-false-HAL-true,5-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,9-MX_RTC_Init-RTC-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_SAI1_Init-SAI1-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_USART3_UART_Init-USART3-false-HAL-true,15-MX_FileX_Init-FILEX-false-HAL-false,16-MX_DAC1_Init-DAC1-false-HAL-true,17-MX_TIM2_Init-TIM2-false-HAL-true,18-MX_USBX_Init-USBX-false-HAL-false,19-MX_ADC4_Init-ADC4-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true,0-MX_VREFBUF_Init-VREFBUF-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -578,8 +588,12 @@ SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SH.GPXTI15.0=GPIO_EXTI15
 SH.GPXTI15.ConfNb=1
-SH.GPXTI2.0=GPIO_EXTI2
-SH.GPXTI2.ConfNb=1
+SH.SharedAnalog_PC2.0=GPIO_Analog
+SH.SharedAnalog_PC2.1=ADC1_IN3,IN3-Single-Ended
+SH.SharedAnalog_PC2.ConfNb=2
+SH.SharedAnalog_PC3.0=GPIO_Analog
+SH.SharedAnalog_PC3.1=ADC1_IN4,IN4-Single-Ended
+SH.SharedAnalog_PC3.ConfNb=2
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 SPI1.CalculateBaudRate=625.0 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
@@ -641,6 +655,8 @@ VP_PWR_VS_LPOM.Mode=PowerOptimisation
 VP_PWR_VS_LPOM.Signal=PWR_VS_LPOM
 VP_PWR_VS_SECSignals.Mode=Security/Privilege
 VP_PWR_VS_SECSignals.Signal=PWR_VS_SECSignals
+VP_PWR_Vdda.Mode=isolationVdda
+VP_PWR_Vdda.Signal=PWR_Vdda
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_tim6.Mode=TIM6
